// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> FlexItem subcomponent displays provided label 1`] = `
<Flex
  alignContent="stretch"
  alignItems="center"
  direction="row"
  justifyContent="flex-start"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
  wrap="nowrap"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="circle"
    pullRight={false}
  />
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    pad={5}
    shrink={1}
  >
    <span>
       
      tester
    </span>
  </FlexItem>
</Flex>
`;

exports[`<Radio /> FlexItem subcomponent when no label provided, empty component (null) 1`] = `
<Flex
  alignContent="stretch"
  alignItems="center"
  direction="row"
  justifyContent="flex-start"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
  wrap="nowrap"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="circle"
    pullRight={false}
  />
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    pad={5}
    shrink={1}
  />
</Flex>
`;

exports[`<Radio /> Icon subcomponent if checked, [name='dot-circle'] 1`] = `
<Flex
  alignContent="stretch"
  alignItems="center"
  direction="row"
  justifyContent="flex-start"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
  wrap="nowrap"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="dot-circle"
    pullRight={false}
  />
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    pad={5}
    shrink={1}
  />
</Flex>
`;

exports[`<Radio /> Icon subcomponent otherwise [name='circle'] 1`] = `
<Flex
  alignContent="stretch"
  alignItems="center"
  direction="row"
  justifyContent="flex-start"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
  wrap="nowrap"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="circle"
    pullRight={false}
  />
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    pad={5}
    shrink={1}
  />
</Flex>
`;

exports[`<Radio /> renders a Flex component containing an Icon and a FlexItem component 1`] = `
<Flex
  alignContent="stretch"
  alignItems="center"
  direction="row"
  justifyContent="flex-start"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
  wrap="nowrap"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="dot-circle"
    onClick={[MockFunction]}
    pullRight={false}
  />
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    pad={5}
    shrink={1}
  >
    <span>
       
      test label
    </span>
  </FlexItem>
</Flex>
`;

exports[`<Radio /> renders correctly 1`] = `
<Flex
  alignContent="stretch"
  alignItems="center"
  direction="row"
  justifyContent="flex-start"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
  wrap="nowrap"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="circle"
    pullRight={false}
  />
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    pad={5}
    shrink={1}
  />
</Flex>
`;
